55 minutes
apply docker container to the code
